--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ineu</title>
   <link rel="stylesheet" href="style1.css">
+  <link rel="icon" href="Imagini\icon.png">
 </head>
 <body>
   <header>
