--- a/propuneri.html
+++ b/propuneri.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Depuneți o Plângere | Ineu, Județul Arad, România</title>
+  <link rel="icon" href="Imagini\icon.png">
 </head>
 <body>
   <header>
