--- a/history.html
+++ b/history.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Istoria Ineu | Județul Arad, România</title>
   <link rel="stylesheet" href="styleHistory.css">
+  <link rel="icon" href="Imagini\icon.png">
 </head>
 <body>
   <header>
