--- a/culture.html
+++ b/culture.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ineu | Cultura</title>
     <link rel="stylesheet" href="culture.css">
+    <link rel="icon" href="Imagini\icon.png">
 </head>
 <body>
     <iframe class="youtubevideo" style="position:fixed; top:0; left:0; bottom:0; right:0; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;" src="video\videoplayback.mp4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
